[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies] 
reqwest = "0.11.9"
tokio = { version = "1.16.1", features = ["full"] }
anyhow = "*"
http = "0.2.6"
serde_json = "1.0.78"
serde = { version = "1.0.126", features = ["derive"] }
env_logger = "0.8.4"
log = "0.4.0"
simple_logger = "2.1.0" 
select = "0.5.0" 
url = "2.2.2"
futures = "0.3.21"
